src/components/svg-default-displayer/editor.scss
.maxi-svg-defaults {
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-start;

	&__item {
		cursor: pointer;
		height: auto;
		padding: 0;
		width: calc(16.6666666667% - 5px);
		border: 2px solid #dddfe1;
		border-radius: 5px;
		margin: 0 5px 5px 0;

		&--active {
			background: #f2f2f2;
		}
		&:last-child {
			margin-right: 0;
		}
		&:hover {
			background-color: #f2f2f2;
		}
		svg {
			width: 100%;
			height: 100%;
			padding: 5px;
		}
	}
}

